fix glitch on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -26,12 +26,15 @@ body {
 
 .App {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
 }
+
 
 .About{
     display: flex;
